--- a/frontend/src/i18n/locales/en/home.json
+++ b/frontend/src/i18n/locales/en/home.json
@@ -1,6 +1,6 @@
 {
-  "title": "Welcome to SpaceLogic!",
-  "description1": "At SpaceLogic, we help simplify your architectural projects. This online platform is designed to support architects and their clients by streamlining communication on all aspects of the project.",
+  "title": "The logical tool for modern architects",
+  "description1": "SpaceLogic is a collaborative platform designed to help you organize your architectural projects.",
   "description2": "Join our community now and take advantage of the platform that will transform the way you manage projects!",
   "featuresTitle": "What We Offer",
   "features": {
