--- a/frontend/src/i18n/locales/fr/home.json
+++ b/frontend/src/i18n/locales/fr/home.json
@@ -1,6 +1,6 @@
 {
-  "title": "Bienvenue chez SpaceLogic!",
-  "description1": "Chez SpaceLogic, nous vous aiderons à simplifier vos projets d'architecture. Cette plateforme en ligne est conçue pour accompagner les architectes ainsi que leurs clients afin de faciliter la communication sur les différents aspects du projet.",
+  "title": "L'outil logique des architectes modernes.",
+  "description1": "SpaceLogic est une plateforme collaborative conçue pour vous aider dans l'organisation de vos projets architecturaux ",
   "description2": "Rejoignez notre communauté dès maintenant pour tirer profit de la plateforme qui transformera votre façon de gérer les projets!",
   "featuresTitle": "Ce que nous offrons",
   "features": {
