--- a/frontend/src/i18n/locales/en/contact.json
+++ b/frontend/src/i18n/locales/en/contact.json
@@ -2,5 +2,7 @@
   "title": "Contact Us",
   "socialIntro": "You can follow us on social media to stay up to date with new features at the addresses below.",
   "emailTitle": "Email",
-  "emailText": "For more information, you can reach us at the following email address: spacelogic.info@gmail.com"
+  "emailText": "For more information, you can reach us at the following email address: spacelogic.info@gmail.com",
+  "ctaSpecificTitle": "Need something specific?",
+  "ctaSpecificBody": "Tell us more about your project and constraints, we’ll tailor the solution."
 }
