--- a/frontend/src/i18n/locales/en/services.json
+++ b/frontend/src/i18n/locales/en/services.json
@@ -2,5 +2,15 @@
   "title": "Available Services",
   "intro": "We offer a hosting platform for your architectural projects where you can find all the projects you're involved in.",
   "softwareTitle": "Our Software",
-  "softwareText": "When you select a project, you'll find each room with all the necessary attributes, such as doors, partitions, finishes, and more. Each element of a project includes a comment space so clients can leave feedback. To ensure secure access, only organization administrators can invite people to a project."
+  "softwareText": "When you select a project, you'll find each room with all the necessary attributes, such as doors, partitions, finishes, and more. Each element of a project includes a comment space so clients can leave feedback. To ensure secure access, only organization administrators can invite people to a project.",
+  "softwareTag": "Software",
+  "implementationTag": "Implementation",
+  "deploymentTitle": "Deployment",
+  "deploymentText": "We deploy, connect, and align with your manufacturing/logistics stack.",
+  "consultingTag": "Consulting",
+  "advisoryTitle": "Advisory",
+  "advisoryText": "Blueprints, processes, and governance for operations at scale.",
+  "integrationTag": "Integration",
+  "systemsTitle": "Systems",
+  "systemsText": "APIs and data pipelines that make architecture and logistics talk."
 }
