--- a/frontend/src/i18n/locales/fr/contact.json
+++ b/frontend/src/i18n/locales/fr/contact.json
@@ -2,5 +2,7 @@
   "title": "Nous joindre",
   "socialIntro": "Il est possible de nous suivre sur les réseaux sociaux afin de rester au courant des nouvelles fonctionnalités aux adresses ci-dessous.",
   "emailTitle": "Courriel",
-  "emailText": "Pour plus d'information, il est possible de nous contacter par courriel à l'adresse suivante : spacelogic.info@gmail.com"
+  "emailText": "Pour plus d'information, il est possible de nous contacter par courriel à l'adresse suivante : spacelogic.info@gmail.com",
+  "ctaSpecificTitle": "Un besoin spécifique?",
+  "ctaSpecificBody": "Parlez-nous de votre projet et de vos contraintes, nous adapterons la solution."
 }
